--- a/projects_test.html
+++ b/projects_test.html
@@ -13,7 +13,7 @@ title: Projects Test
 		<a href="{{ project.url | prepend:site.baseurl | prepend:site.url }}">
 			<h2>{{ project.title }}</h2>
 			<div class="content">
-				<p>{{ project.content }}</p>
+				<p>{{ project.content | truncate: 100 }}</p>
 			</div>
 		</a>
 	</article>
